--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,7 +30,9 @@
   shell: mkdir /tmp/ruby && cd /tmp/ruby && curl --progress ftp://ftp.ruby-lang.org/pub/ruby/2.0/ruby-2.0.0-p353.tar.gz | tar xz && cd ruby-2.0.0-p353 && ./configure --disable-install-rdoc && make && sudo make install creates=/opt/ruby/bin/ruby
 
 - name: Install Bundler Gem
+  sudo: yes
   gem: name=bundler state=latest
 
 - name: Add the gitlab_ci_runner user
+  sudo: yes
   user: name=gitlab_ci_runner comment="GitLab CI Runner"
